Fixed node version strapi

--- a/strapi/package.json
+++ b/strapi/package.json
@@ -23,7 +23,7 @@
     "uuid": "d1b5ed27-1f61-4961-9550-aae52085d780"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": "16.20.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
