--- a/strapi/package.json
+++ b/strapi/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.11.1",
     "@strapi/plugin-users-permissions": "4.11.1",
+    "@strapi/provider-upload-cloudinary": "^4.11.4",
     "@strapi/strapi": "4.11.1",
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.1"
