--- a/strapi/.env.example
+++ b/strapi/.env.example
@@ -1,6 +1,14 @@
-HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-JWT_SECRET=tobemodified
+HOST=
+PORT=
+APP_KEYS=
+API_TOKEN_SALT=
+ADMIN_JWT_SECRET=
+TRANSFER_TOKEN_SALT=
+# Database
+DATABASE_CLIENT=
+DATABASE_FILENAME=
+JWT_SECRET=
+# Cloudinary
+CLOUDINARY_NAME= 
+CLOUDINARY_KEY= 
+CLOUDINARY_SECRET= 
