--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,55 +1,52 @@
 {
-  "name": "frontend",
+  "name": "@frontend/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start:app": "nx serve app",
+    "start:platform": "nx serve platform",
     "start:graphql-sandbox": "node scripts/graphql-sandbox/sandbox.js",
     "===== BUILD =====": "",
     "build:app": "nx build app"
   },
   "private": true,
   "dependencies": {
-    "@nrwl/next": "15.6.3",
-    "next": "13.1.1",
-    "openurl": "^1.1.1",
+    "@nx/next": "16.5.1",
+    "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@nrwl/cypress": "15.6.3",
-    "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "15.6.3",
-    "@nrwl/js": "15.6.3",
-    "@nrwl/linter": "15.6.3",
-    "@nrwl/react": "15.6.3",
-    "@nrwl/workspace": "15.6.3",
-    "@testing-library/react": "13.4.0",
-    "@types/jest": "28.1.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "babel-jest": "28.1.1",
-    "cypress": "^12.2.0",
+    "@nx/cypress": "16.5.1",
+    "@nx/eslint-plugin": "16.5.1",
+    "@nx/jest": "16.5.1",
+    "@nx/js": "16.5.1",
+    "@nx/linter": "16.5.1",
+    "@nx/react": "16.5.1",
+    "@nx/workspace": "16.5.1",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "babel-jest": "^29.4.1",
+    "cypress": "^12.16.0",
     "eslint": "~8.15.0",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "nx": "15.6.3",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "nx": "16.5.1",
     "prettier": "^2.6.2",
-    "react-test-renderer": "18.2.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~5.1.3"
   }
 }
