--- a/frontend/apps/platform/project.json
+++ b/frontend/apps/platform/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/platform"
+        "outputPath": "dist/apps/platform",
+        "postcssConfig": "apps/platform/postcss.config.js"
       },
       "configurations": {
         "development": {
