--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.5.1",
     "@nx/eslint-plugin": "16.5.1",
     "@nx/jest": "16.5.1",
@@ -31,6 +32,7 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
     "cypress": "^12.16.0",
     "eslint": "~8.15.0",
@@ -44,7 +46,9 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "16.5.1",
+    "postcss": "^8.4.25",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
