Revert "Added shared lib"
This reverts commit 7f80717a83814bc66928f2ba00297946cd42d698.

--- a/frontend/tsconfig.base.json
+++ b/frontend/tsconfig.base.json
@@ -14,9 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@frontend/jsx-core": ["libs/jsx-core/src/index.ts"]
-    },
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
