--- a/frontend/apps/platform/tsconfig.json
+++ b/frontend/apps/platform/tsconfig.json
@@ -25,7 +25,7 @@
     "**/*.jsx",
     "../../apps/platform/.next/types/**/*.ts",
     "../../dist/apps/platform/.next/types/**/*.ts",
-    "next-env.d.ts",
+    "next-env.d.ts"
   ],
   "exclude": [
     "node_modules",
