--- a/frontend/tsconfig.base.json
+++ b/frontend/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@frontend/jsx-core": ["libs/jsx-core/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
