--- a/strapi/.env.example
+++ b/strapi/.env.example
@@ -4,11 +4,21 @@ APP_KEYS=
 API_TOKEN_SALT=
 ADMIN_JWT_SECRET=
 TRANSFER_TOKEN_SALT=
-# Database
+
+# Development database
 DATABASE_CLIENT=
 DATABASE_FILENAME=
 JWT_SECRET=
+
+# Production database
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+ENCRYPTION_KEY=
+
 # Cloudinary
-CLOUDINARY_NAME= 
-CLOUDINARY_KEY= 
-CLOUDINARY_SECRET= 
+CLOUDINARY_NAME=
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
