--- a/strapi/package.json
+++ b/strapi/package.json
@@ -5,9 +5,13 @@
   "description": "A Strapi application",
   "scripts": {
     "develop": "strapi develop",
+    "develop:production": "NODE_ENV=production strapi develop",
     "start": "strapi start",
+    "start:production": "NODE_ENV=production strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "export": "strapi export --file strapi-export --env production",
+    "export:production": "NODE_ENV=production strapi export --file strapi-export-prod --key %ENCRYPTION_KEY%"
   },
   "dependencies": {
     "@strapi/plugin-graphql": "^4.11.1",
@@ -16,7 +20,8 @@
     "@strapi/provider-upload-cloudinary": "^4.11.4",
     "@strapi/strapi": "4.11.1",
     "better-sqlite3": "8.0.1",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "pg-connection-string": "^2.6.1"
   },
   "author": {
     "name": "A Strapi developer"
