--- a/strapi/package.json
+++ b/strapi/package.json
@@ -10,10 +10,10 @@
     "start:production": "NODE_ENV=production strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "export": "strapi export --file strapi-export",
-    "export:production": "NODE_ENV=production strapi export --file strapi-export-prod --key %ENCRYPTION_KEY%",
-    "import": "strapi import --file strapi-export.tar.gz",
-    "import:production": "NODE_ENV=production strapi import --file strapi-export-prod.tar.gz.enc"
+    "export": "source .env && strapi export --file strapi-export --key $ENCRYPTION_KEY && mv ./strapi-export.tar.gz.enc ./strapi-exports",
+    "export:production": "source .env && NODE_ENV=production strapi export --file strapi-export-prod --key $ENCRYPTION_KEY && mv ./strapi-export-prod.tar.gz.enc ./strapi-exports",
+    "import": "strapi import --file ./strapi-exports/strapi-export.tar.gz.enc",
+    "import:production": "NODE_ENV=production strapi import --file ./strapi-exports/strapi-export-prod.tar.gz.enc"
   },
   "dependencies": {
     "@strapi/plugin-graphql": "^4.11.1",
