--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.17",
     "@nx/next": "16.5.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "graphql": "^16.7.1",
     "next": "13.4.1",
+    "openurl": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
