Added graphql types

--- a/frontend/tsconfig.base.json
+++ b/frontend/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@frontend/core": ["libs/core/src/index.ts"],
+      "@frontend/graphql/content": ["libs/graphql/content/src/index.ts"],
       "@frontend/jsx-core": ["libs/jsx-core/src/index.ts"]
     }
   },
