--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,12 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
+    "@graphql-codegen/near-operation-file-preset": "^2.5.0",
+    "@graphql-codegen/typed-document-node": "^5.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@nx/cypress": "16.5.1",
     "@nx/eslint-plugin": "16.5.1",
     "@nx/jest": "16.5.1",
@@ -44,6 +49,7 @@
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
     "cypress": "^12.16.0",
+    "dotenv": "^16.3.1",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
