--- a/strapi/package.json
+++ b/strapi/package.json
@@ -13,7 +13,7 @@
     "export": "source .env && strapi export --file strapi-export --key $ENCRYPTION_KEY && mv ./strapi-export.tar.gz.enc ./strapi-exports",
     "export:production": "source .env && NODE_ENV=production strapi export --file strapi-export-prod --key $ENCRYPTION_KEY && mv ./strapi-export-prod.tar.gz.enc ./strapi-exports",
     "import": "strapi import --file ./strapi-exports/strapi-export.tar.gz.enc",
-    "import:production": "source .env && strapi import --file ./strapi-exports/strapi-export-prod.tar.gz.enc --key $ENCRYPTION_KEY", 
+    "import:production": "source .env && NODE_ENV=production strapi import --file ./strapi-exports/strapi-export-prod.tar.gz.enc --key $ENCRYPTION_KEY", 
     "sync:from-prod": "source .env && strapi transfer --from $STRAPI_PRODUCTION --from-token $TRANSFER_TOKEN --force"
   },
   "dependencies": {
