--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "@nx/next": "16.5.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.5",
     "graphql": "^16.7.1",
     "markdown-to-jsx": "^7.2.1",
